--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,7 +7,8 @@
     "storage",
     "activeTab",
     "scripting",
-    "tabs"
+    "tabs",
+    "alarms"
   ],
   "host_permissions": [
     "https://codeforces.com/*",
